# wapc-rust

./: Cargo.toml  README.md
.assets/: hello.wasm  hello_as.wasm  hello_tinygo.wasm  hello_wasi.wasm  hello_zig.wasm
examples/: asdemo.rs  demo.rs  demo_logger.rs  tinygodemo.rs  zigdemo.rs
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs
examples/hello_wasi/: Cargo.toml
examples/hello_wasi/src/: lib.rs
src/: callbacks.rs  errors.rs  lib.rs  modreg.rs  prelude.rs
