[package]
name = "wapc"
version = "0.7.2"
authors = ["waPC team <alothien@gmail.com>"]
edition = "2018"
description = "Rust WebAssembly Host Runtime Conforming to the waPC Standard"
license = "Apache-2.0"
homepage = "https://github.com/wapc"
documentation = "https://docs.rs/wapc"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasi"]
categories = ["wasm", "api-bindings"]
exclude = [".assets"]

[dependencies]
log = "0.4.8"
env_logger = "0.7"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
wasmtime = "0.16.0"
wasmtime-wasi = "0.16.0"
anyhow = "1.0"
wasi-common = "0.16.0"