[package]
name = "wapc"
version = "0.9.0"
authors = ["waPC team <alothien@gmail.com>"]
edition = "2018"
description = "Rust WebAssembly Host Runtime Conforming to the waPC Standard"
license = "Apache-2.0"
homepage = "https://github.com/wapc"
documentation = "https://docs.rs/wapc"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasi"]
categories = ["wasm", "api-bindings"]
exclude = [".assets"]

[dependencies]
log = "0.4.11"
env_logger = "0.7"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
wasmtime = "0.19.0"
wasmtime-wasi = "0.19.1"
anyhow = "1.0.31"
wasi-common = "0.19.1"
